[package]
name = "kodi-sec-proxy"
description = "A proxy for Kodi's JSON-RPC over Websockets and raw TCP/IP interface, which blocks Websocket requests from web pages other than the Kodi web interface."
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
env_logger = "0.10"
httparse = "1.8"
listenfd = "1.0"
log = "0.4"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2.1.1"
tokio-splice = "0.2.1"

[dev-dependencies]
test-case = "3.2.1"
